k8s/deployment-alert-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-service
  namespace: urbanops
  labels:
    app: alert-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-service
  template:
    metadata:
      labels:
        app: alert-service
    spec:
      containers:
        - name: alert-service
          image: nithingowdahm87/hackathon-alert-service:latest
          ports:
            - containerPort: 8091
