k8s/deployment-cctv-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cctv-service
  namespace: urbanops
  labels:
    app: cctv-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cctv-service
  template:
    metadata:
      labels:
        app: cctv-service
    spec:
      containers:
        - name: cctv-service
          image: nithingowdahm87/hackathon-cctv-service:latest
          ports:
            - containerPort: 8094
