k8s/deployment-power-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: power-service
  namespace: urbanops
  labels:
    app: power-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: power-service
  template:
    metadata:
      labels:
        app: power-service
    spec:
      containers:
        - name: power-service
          image: nithingowdahm87/hackathon-power-service:latest
          ports:
            - containerPort: 8093
