k8s/deployment-traffic-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-service
  namespace: urbanops
  labels:
    app: traffic-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-service
  template:
    metadata:
      labels:
        app: traffic-service
    spec:
      containers:
        - name: traffic-service
          image: nithingowdahm87/hackathon-traffic-service:latest
          ports:
            - containerPort: 8092
