k8s/service-alert-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-service
  namespace: urbanops
spec:
  selector:
    app: alert-service
  ports:
    - port: 8091
      targetPort: 8091
