k8s/service-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: urbanops
spec:
  selector:
    app: auth-service
  ports:
    - port: 8090
      targetPort: 8090
