k8s/service-cctv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cctv-service
  namespace: urbanops
spec:
  selector:
    app: cctv-service
  ports:
    - port: 8094
      targetPort: 8094
