k8s/service-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: urbanops
spec:
  selector:
    app: gateway-service
  ports:
    - port: 8081
      targetPort: 8081
