k8s/service-power-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: power-service
  namespace: urbanops
spec:
  selector:
    app: power-service
  ports:
    - port: 8093
      targetPort: 8093
