k8s/service-python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: urbanops
spec:
  selector:
    app: python-service
  ports:
    - port: 8000
      targetPort: 8000
