k8s/service-traffic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-service
  namespace: urbanops
spec:
  selector:
    app: traffic-service
  ports:
    - port: 8092
      targetPort: 8092
